--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Preventivo</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <!-- Intestazione della pagina -->
     <hedaer>
-
+            <h1>Bool Factory</h1>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Servizi</a></li>
+                <li><a href="#">Contatti</a></li>
+            </ul>
     </hedaer>
 
     <!-- Corpo della pagina -->
